# landau

./: .gitignore  Cargo.toml  LICENSE  config.toml
landau-latex-extension/: landau-extension.sty
latex-analyzer/: Cargo.toml
latex-analyzer/src/: ast.rs  lex.rs  lib.rs  parser.rs
latex-analyzer/test/: test3.tex
latex-sty/: landau-extension.sty
latex_analyzer/: Cargo.toml
latex_analyzer/src/: ast.rs  lex.rs  lib.rs  parser.rs
latex_analyzer/test/: test2.tex
math/: Cargo.toml  build.rs
math/c/: .gitignore  CMakeLists.txt  library.c  macro.h  matrix.c  matrix.h  statcode.h  string.c
math/linear-algebra/: CMakeLists.txt  library.c  library.h  matrix.c  string.c
math/src/: approx.rs  lib.rs  pow.rs  root.rs  round.rs
math/src/linear_algebra/: matrix.h  matrix.rs  string.h
math/src/util/: approx.rs  mod.rs  root.rs
src/: buildin_function.rs  config.rs  exec.rs  function.rs  known.rs  lib.rs  transformer.rs
