[package]
name = "landau"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = [
    "latex_analyzer",
    "math",
]

[lib]

[dependencies]
math = { path = "math" }
latex_analyzer = { path = "latex_analyzer" }

lazy_static = "1.4.0"
num = "0.4.1"
regex = "1.10.3"
serde = { version = "1.0.196", features = ["derive"] }
toml = "0.8.10"
clap = "4.5.1"
